k8s/ingress/routing/httpd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-deployment
  namespace: default
  labels:
    app: httpd
spec:
  selector:
    matchLabels:
      app: httpd
  replicas: 1
  template:
    metadata:
      labels:
        app: httpd
    spec:
      containers:
      - name: httpd
        image: httpd:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: httpd
      restartPolicy: Always
---

apiVersion: v1
kind: Service
metadata:
  name: httpd-service
  namespace: default
spec:
  selector:
    app: httpd
  type: ClusterIP
  ports:
  - name: httpd-service
    protocol: TCP
    port: 80
    targetPort: 80
---
